--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <meta name="title" content="Daniel Park Designs"/>
 <meta name="keywords" content="Dpark, dparkd, design, web design, html5, css3, dp, daniel park design, design, branding, web designer"/>
 <meta name="description" content="Daniel is a Web developer and Designer currently residing in Vancouver."/>
-<link rel="shortcut icon" href="images/favicon.ico">
+
+<link rel="shortcut icon" href="assets/images/favicon.ico">
 
 <!--STYLE SHEETS-->
 <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -18,7 +19,6 @@
 
 <!--Font-->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
 
 <!--Scripts-->
